--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "jade": "~1.11.0",
     "morgan": "~1.6.1",
     "node-sass-middleware": "0.8.0",
+    "oclazyload": "^1.0.9",
+    "requirejs": "^2.2.0",
     "serve-favicon": "~2.3.0"
   },
   "devDependencies": {
